[gd_scene load_steps=2 format=3 uid="uid://c6o66kpe4bwoa"]

[ext_resource type="Script" path="res://scenes/general components/hurtbox/HurtBox.gd" id="1_mfjqm"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_mfjqm")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
